2017-02-23  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Crash attempting to load Flash plugin in Wayland
        https://bugs.webkit.org/show_bug.cgi?id=163159

        Reviewed by Michael Catanzaro.

        The problem is that we check if the current diplay is X11 or Wayland also in the plugin process, but with GTK2
        plugins the display is always X11. We should early reject plugins requiring GTK2 in the UI process when the
        current display is Wayland.

        * UIProcess/Plugins/unix/PluginInfoStoreUnix.cpp:
        (WebKit::PluginInfoStore::getPluginInfo):
        * UIProcess/Plugins/unix/PluginProcessProxyUnix.cpp:
        (WebKit::PluginProcessProxy::scanPlugin):
        * UIProcess/gtk/WebPageProxyGtk.cpp:
        (WebKit::WebPageProxy::createPluginContainer): Add an assert to ensure this message is never received on a
        non-X11 display.
        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::createPluginContainer): Never send CreatePluginContainer message to the UI process if the
        display is not X11.

2017-02-23  Tomas Popela  <tpopela@redhat.com>

        [GTK] Drag and drop is always moving the content even if copy is requested
        https://bugs.webkit.org/show_bug.cgi?id=168424

        Reviewed by Carlos Garcia Campos.

        Drag and drop is always moving the content around even if the copy is
        requested (i.e. by pressing the Control key).

        * UIProcess/gtk/DragAndDropHandler.cpp:
        (WebKit::DragAndDropHandler::drop):

2017-02-22  Carlos Garcia Campos  <cgarcia@igalia.com>

        Better handle Thread and RunLoop initialization
        https://bugs.webkit.org/show_bug.cgi?id=167828

        Reviewed by Yusuke Suzuki.

        Remove unnecessary call to WTF::initializeMainThread().

        * Shared/WebKit2Initialize.cpp:
        (WebKit::InitializeWebKit2):

2017-02-27  Carlos Garcia Campos  <cgarcia@igalia.com>
