@@ -1,3 +1,12 @@
+2017-02-25  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        [GTK] Unreviewed, document deficiency in webkit_website_data_manager_clear() API
+
+        Document that this function cannot currently delete cookie data for a particular period of
+        time.
+
+        * UIProcess/API/gtk/WebKitWebsiteDataManager.cpp:
+
 2017-02-23  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Crash attempting to load Flash plugin in Wayland
